Removed PMD.
SVN-Revision: 23341